# forge

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ETHOS.md  LICENSE  Procfile  RAILWAY_DEPLOY.md  README.md  SECURITY.md  TODOS.md  llms.txt  pyproject.toml  railway.json
.agent/: README.md  identity.json  state.json
.claude/: MEMORY.md  settings.json
.claude/agents/: main-agent.md
.claude/agi-1/candidates/: README.md
.claude/healing/: patterns.json
.claude/memory/: archive.md  feedback.md  project.md  reference.md  user.md
.claude/plans/: forge-build-2026-04-26.md
.claude/security/: pii-patterns.json
.claude/skill-mastery/: skill-registry.json
.cursor/rules/: forge.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: PLAYBOOK.md
examples/: hello_world.py
examples/heartbeats/: daily_intel.md  daily_report.md  sync.md  weekly_research.md
examples/operator/: persona.yaml  run.py
examples/operator/heartbeats/: morning_brief.md
examples/operator_real/: mcp.json  run.py  run_with_tools.py
examples/operator_real/heartbeat-logs/: morning_council-20260426T085220Z.json
examples/operator_real/heartbeats/: morning_council.md
examples/recursion_demo/: run.py
forge/: __init__.py  _dotenv.py  cli.py  health.py  mcp_server.py
forge/dashboard/: __init__.py  auth.py  bootstrap.py  db.py  server.py  settings.py  sync_handlers.py
forge/dashboard/static/: dashboard.js
forge/dashboard/templates/: agent_panel.html  base.html  changelog.html  chat_message.html  genome.html  login.html  workspace.html
forge/healing/: __init__.py  circuit_breaker.py  denial.py  error_types.py  hooks.py
forge/intel/: __init__.py  auto_research.py  digest.py  fetch.py  normalize.py  sources.default.yaml  sources.py  store.py
forge/kernel/: __init__.py  hooks.py  loop.py  profile.py  types.py
forge/memory/: __init__.py  claude_dir.py  embeddings.py  genome.py  git_journal.py  obsidian.py  promotion.py  reasoning_bank.py
forge/observability/: __init__.py  dashboard.py  delivery.example.yaml  delivery.py  digest.py  otel.py  telemetry.py  trace.py
forge/orchestrator/: __init__.py  actions.py  agent.py  persona.md
forge/orchestrator/templates/: __init__.py  custom.py  operator.py  research.py  sdr.py
forge/providers/: __init__.py  anthropic.py  base.py  mock.py  openai_compat.py
forge/providers/profiles/: anthropic-contrarian.yaml  anthropic-haiku.yaml  anthropic.yaml  mock.yaml  ollama-llama3.yaml  openai-gpt4.yaml  openrouter-deepseek.yaml
forge/recursion/: __init__.py  llm_proposer.py  loop.py  proposer.py
forge/scaffolder/: __init__.py  design.py  writers.py
forge/scheduler/: __init__.py  cron.crontab.template  github_action.yml.template  heartbeat.py  launchd.plist.template
forge/skills/: __init__.py  autosynth.py  eval_gate.py  search.py  skill.py
forge/swarm/: __init__.py  consensus.py  roles.py  spawner.py  topology.py
forge/sync/: __init__.py  pull.py  push.py  state.py
forge/tools/: __init__.py  base.py  composio_adapter.py  mcp_adapter.py  mcp_client.py  registry.py
forge/tools/builtin/: browser.py  echo.py  fs.py  obsidian.py  shell.py  web_fetch.py  web_search.py
tests/: test_auto_research.py  test_cli.py  test_dashboard.py  test_delivery.py  test_digest.py  test_embeddings.py  test_followons.py  test_healing.py  test_intel_fetch.py  test_intel_inject.py  test_memory.py  test_observability.py  test_obsidian.py  test_orchestrator.py  test_phase0_smoke.py  test_promotion_and_heartbeat.py  test_providers.py  test_recursion.py  test_recursion_loop.py  test_role_council.py  test_scaffolder.py  test_skills.py  test_swarm.py  test_swarm_spawn_depth.py  test_sync.py  test_tools.py  test_web_tools.py  test_winning_patterns.py
