[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge"
version = "0.0.1"
description = "Model-agnostic, self-learning, self-healing agent harness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Justin Bell" }]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
mcp = ["mcp>=1.0.0"]
composio = ["composio_core>=0.5", "composio_openai>=0.5"]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
embeddings = ["fastembed>=0.4.0", "voyageai>=0.3.0"]
all = [
    "anthropic>=0.40.0", "openai>=1.50.0",
    "mcp>=1.0.0",
    "composio_core>=0.5", "composio_openai>=0.5",
    "opentelemetry-api>=1.27", "opentelemetry-sdk>=1.27",
    "fastembed>=0.4.0", "voyageai>=0.3.0",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
forge = "forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
