[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-harness"
version = "0.1.1"
description = "Model-agnostic, self-learning, self-healing agent harness — Python SDK + Claude Code skill/slash/MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Justin Bell" }]
keywords = ["agents", "llm", "harness", "swarm", "anthropic", "mcp", "claude", "openrouter", "composio", "self-modification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/jbellsolutions/forge"
Repository = "https://github.com/jbellsolutions/forge"
Issues = "https://github.com/jbellsolutions/forge/issues"
Changelog = "https://github.com/jbellsolutions/forge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
mcp = ["mcp>=1.0.0"]
composio = ["composio_core>=0.5", "composio_openai>=0.5"]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
embeddings = ["fastembed>=0.4.0", "voyageai>=0.3.0"]
all = [
    "anthropic>=0.40.0", "openai>=1.50.0",
    "mcp>=1.0.0",
    "composio_core>=0.5", "composio_openai>=0.5",
    "opentelemetry-api>=1.27", "opentelemetry-sdk>=1.27",
    "fastembed>=0.4.0", "voyageai>=0.3.0",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
forge = "forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["forge"]
artifacts = [
    "forge/py.typed",
    "forge/**/*.yaml",
    "forge/scheduler/*.template",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
